--- a/package.json
+++ b/package.json
@@ -3,24 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "predev": "npm run typegen",
+    "dev": "next",
+    "prebuild": "npm run typegen",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typegen": "sanity schema extract --path=src/sanity/extract.json && sanity typegen generate"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.7",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.61.0",
+    "groq": "^3.61.0",
+    "next": "14.2.15",
+    "next-sanity": "^9.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.15"
+    "sanity": "^3.61.0",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.15",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.15"
+    "typescript": "^5"
   }
 }
