--- a/package.json
+++ b/package.json
@@ -13,15 +13,22 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.61.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "groq": "^3.61.0",
+    "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "next-sanity": "^9.5.4",
     "react": "^18",
     "react-dom": "^18",
     "sanity": "^3.61.0",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
