--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "next-sanity": "^9.5.4",
+    "next-sanity-image": "^6.1.1",
     "react": "^18",
     "react-dom": "^18",
     "sanity": "^3.61.0",
