--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next-sanity-image": "^6.1.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-hook-form": "^7.53.1",
     "sanity": "^3.61.0",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.4",
