--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.61.0",
+    "@vercel/analytics": "^1.3.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "groq": "^3.61.0",
