--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-hook-form": "^7.53.1",
     "sanity": "^3.61.0",
+    "sanity-plugin-seo": "^1.2.5",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
